--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,19 @@
 <footer>
-    <div style="background-color:	 #404040; color:white;padding:15px;">
+    <div style="background-color:white;padding:15px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
+                    <i class="fa fa-facebook-square" style="font-size:48px; color:bule"></i>
+                    <i class="fa fa-instagram" style="font-size:48px; color:Pink"></i>
+                    <i class="fa fa-twitter-square" style="font-size:48px; color:bule"></i>
 
-                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank">
-                          <img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
-
-                        <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank">
-                          <img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
-
-                        <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank">
-                          <img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
-                  </div>
-                    <div class="col-md-6">
-
-
-                            <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-
-                            <p>ที่อยู่ </p>
-
-                            <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                              112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                                โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-                    </div>
+                      <i class="fa fa-youtube-square" style="font-size:48px;color:red"></i>
+                </div>
+                <div class="col-md-6">
+                    <p>ที่อยู่ </p>
+                    <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ 112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120 โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
                 </div>
             </div>
         </div>
+    </div>
 </footer>
