--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -34,7 +34,7 @@
             element.style {}
 
             .content-section-a {
-                padding: 100px 0;
+                padding: 90px 0;
             }
 
             .trb-survey-bg {
@@ -103,7 +103,7 @@
     </main>
 
     {% include footer.html %}
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </body>
 
 </html>
