--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,15 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
+      <img class="img-responsive " src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="60" height="50">
+    </div>
+      <div class="navbar-header">
       <a class="navbar-brand" href="https://suppaluck.github.io/index">Family Folder Collector
       </a>
     </div>
     <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
     <ul class="nav navbar-nav text-center">
-      <li>FAQ </li>
+      <li><a href="https://suppaluck.github.io/FAQ-ffc.html">FAQ </a></li>
       <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
     </ul>
   </div>
