--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,34 @@
 <footer>
-    <div style="background-color:white;padding:15px;">
+    <div style="background-color:#000000;padding:10px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <i class="fa fa-facebook-square" style="font-size:48px; color:bule"></i>
-                    <i class="fa fa-instagram" style="font-size:48px; color:Pink"></i>
-                    <i class="fa fa-twitter-square" style="font-size:48px; color:bule"></i>
+              <div class="col-md-4">
+                <i class="fa fa-github" style="font-size:36px"></i>
+                <a href="https://travis-ci.org/suppaluck/suppaluck.github.io/builds/172337134">
+                  <img src="https://travis-ci.org/suppaluck/suppaluck.github.io.svg?branch=master" alt="build:failed">
+                </a>
+                  </div>
+                  		        <div class="contact">
+                                <div class="col-md-4">
+                  			      <h4><a href="https://www.nectec.or.th/about/about-contact/">ติดต่อเรา</a></h4>
+                            </div>
+                          </div>
 
-                      <i class="fa fa-youtube-square" style="font-size:48px;color:red"></i>
-                </div>
-                <div class="col-md-6">
-                    <p>ที่อยู่ </p>
-                    <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ 112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120 โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                              <div class="contact">
+                                
+                                <div class="col-md-4">
+                                  <h6>Social</h6>
+                  			        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook"></i></a>
+                  			        <a href="https://plus.google.com/u/0/109124047783033345339/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+                  			        <a href="https://www.youtube.com/channel/UCJpJRnG-RWSbWq-FIcrkzbA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+
+                  			    </div>
+                  	      	</div>
+
+
                 </div>
             </div>
         </div>
-    </div>
+
+
 </footer>
