--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -15,7 +15,7 @@
                 padding-top: 50px;
                 padding-bottom: 50px;
                 color: #f8f8f8;
-                background-image: url(../img/bbg.png);
+                background-image: url(../img/1311756728.jpg);
                 background-size: 99.50%;
                 text-align: center;
                 background-color: #34495e;
@@ -90,7 +90,7 @@
               padding: 70px 0;
               text-align: center;
               }
-
+            
         </style>
 </head>
 <body>
