--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -5,94 +5,104 @@
     <title>{{ site.title }}</title>
 
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <style>
-            .intro-header {
-                height: 120%;
-                padding-top: 50px;
-                padding-bottom: 50px;
-                color: #f8f8f8;
-                background-image: url(../img/1311756728.jpg);
-                background-size: 99.50%;
-                text-align: center;
-                background-color: #34495e;
-            }
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .intro-header {
+            height: 120%;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            color:#33cc33;
+            background-image: url(../img/ffc_pretty.jpg);
+            background-size: 100%;
+            text-align: center;
+            background-color: #34495e;
+        }
 
-            .navbar-inverse {
-                background-color: #ecf0f1;
-            }
+        .navbar-inverse {
+            background-color: #ecf0f1;
+        }
 
-            .carousel-inner>.item>img,
-            .carousel-inner>.item>a>img {
-                width: auto;
-                margin: auto;
-            }
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
+            width: auto;
+            margin: auto;
+        }
 
-            element.style {}
+        element.style {}
 
-            .content-section-a {
-                padding: 90px 0;
-            }
+        .content-section-a {
+            padding: 90px 0;
+        }
 
-            .trb-survey-bg {
-                background-position: left bottom;
-                background-size: 100%;
-                background-repeat: no-repeat;
-                background-image: url(../img/UT77.jpg);
-                background-color: #006699;
-            }
+        .trb-survey-bg {
+            background-position: left bottom;
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-image: url(../img/UT77.jpg);
+            background-color: #006699;
+        }
 
-            .lead {
-                margin-bottom: 30px;
-                font-family: rsu-light;
-                font-size: 1.2em;
-                line-height: 1.46428571;
-                font-weight: 300;
-            }
+        .lead {
+            margin-bottom: 30px;
+            font-family: rsu-light;
+            font-size: 1.2em;
+            line-height: 1.46428571;
+            font-weight: 300;
+        }
 
-            .trb-report-bg {
-                background-size: 100%;
-                background-image: url(../img/White.jpg);
+        .trb-report-bg {
+            background-size: 100%;
+            background-image: url(../img/White.jpg);
+        }
 
-            }
+        .content-section-b {}
 
-            .content-section-b {
+        .trb-showe-bg {
+            background-color: #b8b894;
+        }
 
-            }
+        .trb-video-bg {
+            background-color: #d9ffb3;
+        }
 
-            .trb-showe-bg {
-                background-color: #b8b894;
-            }
+        .trb-contact-bg {
+            background-color: #ffff99;
+        }
 
-            .trb-video-bg {
-                background-color: #d9ffb3;
-            }
+        td[Attributes Style] {
+            width: 244px;
+            height: 186px;
+            vertical-align: top;
+        }
 
-            .trb-contact-bg {
-                background-color: #ffff99;
-            }
+        user agent stylesheet td,
+        th {
+            display: table-cell;
+            vertical-align: inherit;
+        }
 
-            td[Attributes Style] {
-                width: 244px;
-                height: 186px;
-                vertical-align: top;
-            }
+        .center {
+            padding: 70px 0;
+            text-align: center;
+        }
 
-            user agent stylesheet td,
-            th {
-                display: table-cell;
-                vertical-align: inherit;
-            }
-            .center {
-              padding: 70px 0;
-              text-align: center;
-              }
-            
-        </style>
+        .hipchat.home .all-features {
+            padding-top: 20px;
+        }
+
+        section.featured {
+            background: #f5f5f5;
+        }
+
+        .text-left {
+            text-align: left;
+        }
+    </style>
 </head>
+
 <body>
 
     {% include header.html %}
@@ -103,7 +113,7 @@
     </main>
 
     {% include footer.html %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </body>
 
 </html>
