แก้ไขรูปหน้า index

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -11,14 +11,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         .intro-header {
-            height: 120%;
+            height: 100%;
             padding-top: 40px;
             padding-bottom: 40px;
-            color:#33cc33;
-            background-image: url(../img/ffc_pretty.jpg);
+            background-image: url(../img/gb.jpg);
             background-size: 100%;
             text-align: center;
             background-color: #34495e;
+            color: white;
+            text-shadow: 2px 2px 4px #000000;
+        }
+
+        
+        .sansserif {
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         .navbar-inverse {
@@ -99,6 +105,10 @@
 
         .text-left {
             text-align: left;
+        }
+
+        .sansserif {
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
