--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div style="background-color:#000000;padding:10px;">
+    <div style="background-color:#EEEEEE;padding:10px;">
         <div class="container">
             <div class="row">
               <div class="col-md-4">
@@ -17,9 +17,13 @@
                               <div class="contact">
 
                                 <div class="col-md-4">
-                  			        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook"></i></a>
-                  			        <a href="https://plus.google.com/u/0/109124047783033345339/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
-                  			        <a href="https://www.youtube.com/channel/UCJpJRnG-RWSbWq-FIcrkzbA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                  			        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank">
+                                <i class="fa fa-facebook" style="font-size:36px"> </i></a>
+                  			        <a href="https://plus.google.com/u/0/109124047783033345339/posts" target="_blank">
+                                <i class="fa fa-google-plus" style="font-size:36px"></i></a>
+                  			        <a href="https://www.youtube.com/channel/UCJpJRnG-RWSbWq-FIcrkzbA" target="_blank">
+                                  <i class="fa fa-youtube-play" style="font-size:36px"></i></a>
+                                  <i class="fa fa-instagram" style="font-size:36px"></i>
 
                   			    </div>
                   	      	</div>
