--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -11,18 +11,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         .intro-header {
-            height: 100%;
+            height: 80%;
             padding-top: 40px;
             padding-bottom: 40px;
             background-image: url(../img/gb.jpg);
-            background-size: 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
             text-align: center;
-            background-color: #34495e;
+            background-color:#BDBDBD;
             color: white;
             text-shadow: 2px 2px 4px #000000;
         }
 
-        
+
         .sansserif {
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -47,8 +49,8 @@
             background-position: left bottom;
             background-size: 100%;
             background-repeat: no-repeat;
-            background-image: url(../img/UT77.jpg);
-            background-color: #006699;
+
+            background-color: #BDBDBD;
         }
 
         .lead {
@@ -61,17 +63,17 @@
 
         .trb-report-bg {
             background-size: 100%;
-            background-image: url(../img/White.jpg);
+            background-color: #FFFFFF;
         }
 
         .content-section-b {}
 
         .trb-showe-bg {
-            background-color: #b8b894;
+            background-color: #BDBDBD;
         }
 
         .trb-video-bg {
-            background-color: #d9ffb3;
+            background-color: #000000;
         }
 
         .trb-contact-bg {
