--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,33 @@
 <footer>
-    <div style="background-color:#EEEEEE;padding:10px;">
+    <footer id="footer" class="footer">
         <div class="container">
             <div class="row">
-              <div class="col-md-4">
-                <i class="fa fa-github" style="font-size:36px"></i>
-                <a href="https://travis-ci.org/suppaluck/suppaluck.github.io/builds/172337134">
-                  <img src="https://travis-ci.org/suppaluck/suppaluck.github.io.svg?branch=master" alt="build:failed">
-                </a>
-                  </div>
-                  		        <div class="contact">
-                                <div class="col-md-4">
-                  			      <h4><a href="https://www.nectec.or.th/about/about-contact/">ติดต่อเรา</a></h4>
-                            </div>
-                          </div>
-
-                              <div class="contact">
-
-                                <div class="col-md-4">
-                  			        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank">
-                                <i class="fa fa-facebook" style="font-size:36px"> </i></a>
-                  			        <a href="https://plus.google.com/u/0/109124047783033345339/posts" target="_blank">
-                                <i class="fa fa-google-plus" style="font-size:36px"></i></a>
-                  			        <a href="https://www.youtube.com/channel/UCJpJRnG-RWSbWq-FIcrkzbA" target="_blank">
-                                  <i class="fa fa-youtube-play" style="font-size:36px"></i></a>
-                                  <i class="fa fa-instagram" style="font-size:36px"></i>
-
-                  			    </div>
-                  	      	</div>
+                <div class="col-md-5 col-sm-3">
+                    <p class="copyright text-xs-center">
+                        <a href="http://www.nectec.or.th/" target="_blank"><img src="https://netpie.io/public/netpieio/assets/images/logo/nectec_logo_footer.png" style="vertical-align: bottom; height: 24px; margin-left:5px;"></a>
+                    </p>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="footer-menu text-xs-center">
+                        <i class="fa fa-github" style="font-size:36px"></i>
+                        <a href="https://travis-ci.org/suppaluck/suppaluck.github.io/builds/172337134">
+                            <img src="https://travis-ci.org/suppaluck/suppaluck.github.io.svg?branch=master" alt="build:failed">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-3">
+                    <ul class="footer-social-block">
+                        <a href="https://www.facebook.com/groups/990695867648394/" target="_blank"><i class="fa fa-facebook"></i></a>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-sm-3">
+                    <div class="footer-menu text-xs-center">
+                        <a href="http://www.nstda.or.th/" target="_blank"><img src="https://netpie.io/public/netpieio/assets/images/logo/nstda_logo.gif" style="vertical-align: bottom; height: 27px; margin-left:5px;"></a>
 
 
+                    </div>
                 </div>
             </div>
         </div>
 
-
-</footer>
+    </footer>
