--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -17,13 +17,11 @@
             background-image: url(../img/gb.jpg);
             background-repeat: no-repeat;
             background-position: center;
-            background-attachment: fixed;
             text-align: center;
-            background-color:#BDBDBD;
+            background-color: #BDBDBD;
             color: white;
             text-shadow: 2px 2px 4px #000000;
         }
-
 
         .sansserif {
             font-family: Arial, Helvetica, sans-serif;
@@ -49,7 +47,6 @@
             background-position: left bottom;
             background-size: 100%;
             background-repeat: no-repeat;
-
             background-color: #BDBDBD;
         }
 
@@ -111,6 +108,21 @@
 
         .sansserif {
             font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .row {
+            margin-right: -15px;
+            margin-left: -15px;
+        }
+
+        .footer {
+            text-align: center;
+        }
+
+        .footer {
+            background-color: #E0E0E0;
+            color: #212121;
+            padding: 32px 0;
         }
     </style>
 </head>
