--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -18,7 +18,7 @@
             background-repeat: no-repeat;
             background-position: center;
             text-align: center;
-            background-color: #BDBDBD;
+            background-color: #000000;
             color: white;
             text-shadow: 2px 2px 4px #000000;
         }
@@ -47,7 +47,7 @@
             background-position: left bottom;
             background-size: 100%;
             background-repeat: no-repeat;
-            background-color: #BDBDBD;
+            background-color: #F5F5F5;
         }
 
         .lead {
@@ -66,7 +66,7 @@
         .content-section-b {}
 
         .trb-showe-bg {
-            background-color: #BDBDBD;
+            background-color: #F5F5F5;
         }
 
         .trb-video-bg {
