--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-5 col-sm-3">
                     <p class="copyright text-xs-center">
-                        <a href="http://www.nectec.or.th/" target="_blank"><img src="/img/nectec_logo.png" style="vertical-align: bottom; height: 30px; margin-left:5px;"></a>
+                        <a href="http://www.nectec.or.th/" target="_blank"><img src="/img/nectec_logo.png" style="vertical-align: bottom; height: 40px; margin-left:5px;" alt="FFC.com"></a>
                     </p>
                 </div>
                 <div class="col-md-3 col-sm-3">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-md-2 col-sm-3">
                     <div class="footer-menu text-xs-center">
-                        <a href="http://www.nstda.or.th/" target="_blank"><img src="/img/nstda1.png" style="vertical-align: bottom; height: 27px; margin-left:5px;"></a>
+                        <a href="http://www.nstda.or.th/" target="_blank"><img src="/img/nstda1.png" style="vertical-align: bottom; height: 30px; margin-left:5px;" alt="FFC.com"></a>
 
 
                     </div>
