--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-md-2 col-sm-3">
                     <ul class="footer-social-block">
-                        <a href="https://www.facebook.com/groups/990695867648394/" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook"></i></a>
                     </ul>
                 </div>
                 <div class="col-md-2 col-sm-3">
