--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,24 @@
 <footer>
     <footer id="footer" class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 col-sm-3">
-                    <p class="copyright text-xs-center">
-                        <a href="http://www.nectec.or.th/" target="_blank"><img src="/img/nectec_logo.png" style="vertical-align: bottom; height: 40px; margin-left:5px;" alt="FFC.com"></a>
-                    </p>
-                </div>
-                <div class="col-md-3 col-sm-3">
-                    <div class="footer-menu text-xs-center">
-                        <i class="fa fa-github" style="font-size:36px"></i>
-                        <a href="https://travis-ci.org/suppaluck/suppaluck.github.io/builds/172337134">
+
+        <div class="row">
+            <div class="col-md-8 col-sm-3">
+                <p class="copyright text-xs-block">
+                    <a href="http://www.nectec.or.th/" target="_blank">
+                        <img src="/img/nectec_logo.png" style="vertical-align: bottom; height: 40px; margin-left:5px;" alt="FFC.com"></a>
+                    สงวนลิขสิทธิ์ ตาม พ.ร.บ.ลิขสิทธิ์ พ.ศ. 2537 โดย ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+                </p>
+            </div>
+            <div class="col-md-4 col-sm-3">
+                <div class="footer-social-block">
+                    <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook" style="font-size:20px"></i></a>
+                     &nbsp; |
+            <a href="https://travis-ci.org/suppaluck/suppaluck.github.io/builds/172337134">
                             <img src="https://travis-ci.org/suppaluck/suppaluck.github.io.svg?branch=master" alt="build:failed">
                         </a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-3">
-                    <ul class="footer-social-block">
-                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook"></i></a>
-                    </ul>
-                </div>
-                <div class="col-md-2 col-sm-3">
-                    <div class="footer-menu text-xs-center">
-                        <a href="http://www.nstda.or.th/" target="_blank"><img src="/img/nstda1.png" style="vertical-align: bottom; height: 30px; margin-left:5px;" alt="FFC.com"></a>
-
-
-                    </div>
                 </div>
             </div>
         </div>
+
 
     </footer>
