--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -11,10 +11,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         .intro-header {
-            height: auto;
+            height: 490;
             padding-top: 40px;
             padding-bottom: 40px;
-            background-image: url(../img/gb.jpg);
+            background-image: url(../img/hbg.jpg);
             background-repeat: no-repeat;
             background-position: center;
             text-align: center;
@@ -123,6 +123,7 @@
             background-color: #E0E0E0;
             color: #212121;
             padding: 32px 0;
+            font-size: 14px;
         }
     </style>
 </head>
