--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,15 @@
 <footer>
     <footer id="footer" class="footer">
-
+<div class="container">
         <div class="row">
-            <div class="col-md-8 col-sm-3">
+            <div class="col-md-10 col-sm-3">
                 <p class="copyright text-xs-block">
                     <a href="http://www.nectec.or.th/" target="_blank">
-                        <img src="/img/nectec_logo.png" style="vertical-align: bottom; height: 30px; margin-left:5px;" alt="FFC.com"></a>
+                        <img src="/img/nectec_logo.png" style="vertical-align: bottom; height: 40px; margin-left:5px;" alt="FFC.com"></a>
                     สงวนลิขสิทธิ์ ตาม พ.ร.บ.ลิขสิทธิ์ พ.ศ. 2537 โดย ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
                 </p>
             </div>
-            <div class="col-md-4 col-sm-3">
+            <div class="col-md-2 col-sm-3">
                 <div class="footer-social-block">
                     <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook" style="font-size:28px"></i></a>
                      &nbsp; |
@@ -19,6 +19,6 @@
                 </div>
             </div>
         </div>
-
+</div>
 
     </footer>
