--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -11,10 +11,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         .intro-header {
-            height: 490;
+            height: 640;
+
             padding-top: 40px;
             padding-bottom: 40px;
-            background-image: url(../img/hbg.jpg);
+            background-image: url(../img/bgbg.png);
             background-repeat: no-repeat;
             background-position: center;
             text-align: center;
