--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -11,11 +11,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         .intro-header {
-            height: 640;
-
-            padding-top: 40px;
+            height: 600;
             padding-bottom: 40px;
-            background-image: url(../img/bgbg.png);
+            background-image: url(../img/bgbg1.png);
             background-repeat: no-repeat;
             background-position: center;
             text-align: center;
@@ -24,6 +22,11 @@
             text-shadow: 2px 2px 4px #000000;
         }
 
+        element.style {
+            visibility: visible;
+            animation-delay: 0.6s;
+        }
+        
         .sansserif {
             font-family: Arial, Helvetica, sans-serif;
         }
