--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -26,7 +26,7 @@
             visibility: visible;
             animation-delay: 0.6s;
         }
-        
+
         .sansserif {
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -111,7 +111,8 @@
         }
 
         .sansserif {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family:  sans-serif;
+            font-size: 34;
         }
 
         .row {
