แก้ขนาดตัวอักษร

--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -12,9 +12,9 @@
     <style>
         .intro-header {
             height: 600;
-            padding-bottom: 40px;
-            background-image: url(../img/bgbg1.png);
-            background-repeat: no-repeat;
+            width: auto;
+            padding-bottom: 50px;
+            background-image: url(../img/g2.png);
             background-position: center;
             text-align: center;
             background-color: #000000;
@@ -25,10 +25,6 @@
         element.style {
             visibility: visible;
             animation-delay: 0.6s;
-        }
-
-        .sansserif {
-            font-family: Arial, Helvetica, sans-serif;
         }
 
         .navbar-inverse {
@@ -111,8 +107,8 @@
         }
 
         .sansserif {
-            font-family:  sans-serif;
-            font-size: 34;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 36;
         }
 
         .row {
