--- a/_sass/custom/_mycustom.scss
+++ b/_sass/custom/_mycustom.scss
@@ -3,5 +3,126 @@ h1 {
 }
 .text-big{
   font-size: 400%;
-  
 }
+.intro-header {
+    height: 600;
+    width: auto;
+    padding-bottom: 50px;
+    background-image: url(../img/g2.png);
+    background-position: center;
+    background-repeat: no-repeat, repeat;
+    text-align: center;
+    background-color: #000000;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+}
+element.style {
+    visibility: visible;
+    animation-delay: 0.6s;
+}
+.sansserif {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar-inverse {
+    background-color: #ecf0f1;
+}
+
+.carousel-inner>.item>img,
+.carousel-inner>.item>a>img {
+    width: auto;
+    margin: auto;
+}
+
+element.style {}
+
+.content-section-a {
+    padding: 90px 0;
+}
+
+.trb-survey-bg {
+    background-position: left bottom;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #F5F5F5;
+}
+
+.lead {
+    margin-bottom: 30px;
+    font-family: rsu-light;
+    font-size: 1.2em;
+    line-height: 1.46428571;
+    font-weight: 300;
+}
+
+.trb-report-bg {
+    background-size: 100%;
+    background-color: #FFFFFF;
+}
+
+.content-section-b {}
+
+.trb-showe-bg {
+    background-color: #F5F5F5;
+}
+
+.trb-video-bg {
+    background-color: #000000;
+}
+
+.trb-contact-bg {
+    background-color: #ffff99;
+}
+
+td[Attributes Style] {
+    width: 244px;
+    height: 186px;
+    vertical-align: top;
+}
+
+user agent stylesheet td,
+th {
+    display: table-cell;
+    vertical-align: inherit;
+}
+
+.center {
+    padding: 70px 0;
+    text-align: center;
+}
+
+.hipchat.home .all-features {
+    padding-top: 20px;
+}
+
+section.featured {
+    background: #f5f5f5;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.sansserif {
+    font-family:  sans-serif;
+    font-size: 34;
+}
+
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.footer {
+    text-align: center;
+}
+
+.footer {
+    background-color: #E0E0E0;
+    color: #212121;
+    padding: 32px 0;
+    font-size: 14px;
+}
+body {
+    padding-top: 70px;
+  }
