--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -7,7 +7,98 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
+    <style>
+        .intro-header {
+            height: 120%;
+            padding-top: 50px;
+            padding-bottom: 50px;
+            color: #f8f8f8;
+            background-image: url(../img/bbg.png);
+            background-size: 99.50%;
+            text-align: center;
+            background-color: #34495e;
+        }
+
+        .navbar-inverse {
+            background-color: #ecf0f1;
+        }
+
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
+            width: auto;
+            margin: auto;
+        }
+
+        element.style {}
+
+        .content-section-a {
+            padding: 90px 0;
+        }
+
+        .trb-survey-bg {
+            background-position: left bottom;
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-image: url(../img/UT77.jpg);
+            background-color: #006699;
+        }
+
+        .lead {
+            margin-bottom: 30px;
+            font-family: rsu-light;
+            font-size: 1.2em;
+            line-height: 1.46428571;
+            font-weight: 300;
+        }
+
+        .trb-report-bg {
+            background-image: url(../img/White.jpg);
+        }
+
+        .content-section-b {}
+
+        .trb-showe-bg {
+            background-color: #b8b894;
+        }
+
+        .trb-video-bg {
+            background-color: #d9ffb3;
+        }
+
+        .trb-contact-bg {
+            background-color: #ffff99;
+        }
+
+        td[Attributes Style] {
+            width: 244px;
+            height: 186px;
+            vertical-align: top;
+        }
+
+        user agent stylesheet td,
+        th {
+            display: table-cell;
+            vertical-align: inherit;
+        }
+
+        .center {
+            padding: 70px 0;
+            text-align: center;
+        }
+
+        body {
+            padding-top: 70px;
+        }
+        .ffc {
+      width: 320px;
+      padding fixed-top;: 10px;
+      border: 5px solid gray;
+      background-color:#d9ffb3 ;
+      margin:  0  ;
+  }
+
+
+    </style>
 </head>
 
 <body>
