--- a/_sass/custom/_mycustom.scss
+++ b/_sass/custom/_mycustom.scss
@@ -16,10 +16,8 @@ h1 {
     color: white;
     text-shadow: 2px 2px 4px #000000;
 }
-element.style {
-    visibility: visible;
-    animation-delay: 0.6s;
-}
+
+
 .sansserif {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -33,8 +31,6 @@ element.style {
     width: auto;
     margin: auto;
 }
-
-element.style {}
 
 .content-section-a {
     padding: 90px 0;
@@ -90,6 +86,10 @@ th {
     padding: 70px 0;
     text-align: center;
 }
+.column-colspan-1{
+  padding: 30px 0;
+  text-align: left;
+}
 
 .hipchat.home .all-features {
     padding-top: 20px;
@@ -111,7 +111,9 @@ section.featured {
 .row {
     margin-right: -15px;
     margin-left: -15px;
+
 }
+
 
 .footer {
     text-align: center;
