แก้ข่าวและเพิ่มข่าวในหน้าindex

--- a/_sass/custom/_mycustom.scss
+++ b/_sass/custom/_mycustom.scss
@@ -26,11 +26,7 @@ h1 {
     background-color: #ecf0f1;
 }
 
-.carousel-inner>.item>img,
-.carousel-inner>.item>a>img {
-    width: auto;
-    margin: auto;
-}
+
 
 .content-section-a {
     padding: 90px 0;
@@ -43,20 +39,12 @@ h1 {
     background-color: #F5F5F5;
 }
 
-.lead {
-    margin-bottom: 30px;
-    font-family: rsu-light;
-    font-size: 1.2em;
-    line-height: 1.46428571;
-    font-weight: 300;
-}
+
 
 .trb-report-bg {
     background-size: 100%;
     background-color: #FFFFFF;
 }
-
-.content-section-b {}
 
 .trb-showe-bg {
     background-color: #F5F5F5;
@@ -82,18 +70,19 @@ th {
     vertical-align: inherit;
 }
 
-.center {
-    padding: 70px 0;
+.centers {
+    padding: 400px 0;
     text-align: center;
 }
 .column-colspan-1{
   padding: 30px 0;
   text-align: left;
 }
-
-.hipchat.home .all-features {
-    padding-top: 20px;
+.center {
+    padding: 20px 0;
+    text-align: center;
 }
+
 
 section.featured {
     background: #f5f5f5;
@@ -129,15 +118,18 @@ section.featured {
 .news-bg{
   background-color: #E0E0E0;
 }
-.news-center {
-    padding: 30px;
-    text-align: center;
-}
 
 .news-link{
     text-decoration: none;
 }
+.newsh-padding{
+  padding: 10px;
 
+}
+.newsh-content{
+  height: 250px;
+  width: auto;
+}
 .footer {
     text-align: center;
 }
