เพิ่มปุ่ม ลิงค์ข่าว

--- a/_sass/custom/_mycustom.scss
+++ b/_sass/custom/_mycustom.scss
@@ -74,6 +74,10 @@ th {
     padding: 400px 0;
     text-align: center;
 }
+.news-center{
+    padding: 30px 0;
+    text-align: center;
+}
 .column-colspan-1{
   padding: 30px 0;
   text-align: left;
@@ -116,7 +120,7 @@ section.featured {
   height: 300px;
 }
 .news-bg{
-  background-color: #E0E0E0;
+  background-color: #EEEEEE;
 }
 
 .news-link{
