ทำให้สีรายละเอียดข่าว เวลา เป็นสีดำ และเมื่อเอาเมาส์ชี้ต้องไม่มีขีดเส้นใต้ข้อความ

--- a/_sass/custom/_mycustom.scss
+++ b/_sass/custom/_mycustom.scss
@@ -116,14 +116,21 @@ section.featured {
   padding: 5px;
 
 }
+.news1-padding{
+  padding: 2px;
+
+}
 .news-content{
-  height: 300px;
+  height: 200px;
+}
+.news1-content{
+  height: 100px;
 }
 .news-bg{
   background-color: #EEEEEE;
 }
 
-.news-link{
+a:link {
     text-decoration: none;
 }
 .newsh-padding{
