--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,8 @@
             </div>
             <div class="col-md-2 col-sm-3">
                 <div class="footer-social-block">
-                    <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><i class="fa fa-facebook" style="font-size:28px"></i></a>
+                    <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank">
+                      <i class="fa fa-facebook" style="font-size:28px;color:#3333ff"></i></a>
                      &nbsp; |
             <a href="https://travis-ci.org/suppaluck/suppaluck.github.io/builds/172337134">
                             <img src="https://travis-ci.org/suppaluck/suppaluck.github.io.svg?branch=master" style="vertical-align: bottom; height: 20px; margin-left:5px;" alt="build:failed">
