ปรับขนาดของรูปใน slide ให้เท่ากันทั้งหมด

--- a/_sass/custom/_mycustom.scss
+++ b/_sass/custom/_mycustom.scss
@@ -26,8 +26,9 @@ div {
 }
 
 .navbar-inverse {
-    background-color: #777;
-    font-family: Montserrat, sans-serif;
+      padding: 6px 0;
+      background-color: #777;
+      font-family: Montserrat, sans-serif;
       margin-bottom: 0;
       background-color: #2d2d30;
       border: 0;
