--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
             </div>
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav text-center">
-                  
+
                   <li><a href="https://suppaluck.github.io/FAQ-ffc.html">FAQ </a></li>
-                  <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                  <li><a href="https://suppaluck.github.io/download-ffc.html">download</a></li>
 
                 </ul>
             </div>
