--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,12 +10,12 @@
             </div>
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav text-center">
-                  <li><a href="https://suppaluck.github.io/index#What">What</a></li>
-                  <li><a href="https://suppaluck.github.io/index#Who">Who</a></li>
-                  <li><a href="https://suppaluck.github.io/index#tour">property</a></li>
+                  <li><a href="https://suppaluck.github.io/index#What">ABOUT</a></li>
+                  <li><a href="https://suppaluck.github.io/index#Who">USER</a></li>
+                  <li><a href="https://suppaluck.github.io/index#tour">FEATURES</a></li>
                   <li><a href="https://suppaluck.github.io/FAQ-ffc.html">FAQ </a></li>
-                  <li><a href="https://suppaluck.github.io/download-ffc.html">download</a></li>
-                  <li><a href="https://suppaluck.github.io/index#contact">contact</a></li>
+                  <li><a href="https://suppaluck.github.io/download-ffc.html">DOWNLOAD</a></li>
+                  <li><a href="https://suppaluck.github.io/index#contact">CONTACT</a></li>
 
                 </ul>
             </div>
