--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
                   <li><a href="https://suppaluck.github.io/FAQ-ffc.html">FAQ </a></li>
                   <li><a href="https://suppaluck.github.io/download-ffc.html">DOWNLOAD</a></li>
                   <li><a href="https://suppaluck.github.io/index#contact">CONTACT</a></li>
+                  <li><a href="https://www2.rsu.ac.th/home">rsu</a></li>
 
                 </ul>
             </div>
